fix a little bit hover layout broken

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,7 @@
 :root {
   --color-dark: #202227;
-  --color-light: #2b2d36;
+  --color-light: #25272e;
+  --color-light-hover: #42434c;
   --color-base: #ebcf4e;
   --color-base-hover: #edc411;
   --color-white: white;
